--- a/style.css
+++ b/style.css
@@ -89,3 +89,112 @@ nav ul li a :hover ::after{
     width: 400px ;
     height: 400px;
 }
+
+.navigation-manual{
+    position: absolute;
+    width: 800px;
+    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn{
+    border: 2px solid #40d3dc;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.manual-btn :not(:last-child){
+
+    margin-right: 40px;
+}
+
+.manual-btn :hover{
+    background: #40d3dc;
+}
+
+#radio1 :checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2 :checked ~ .first{
+    margin-left: -20%;
+}
+
+#radio3 :checked ~ .first{
+    margin-left: -40%;
+}
+
+#radio4 :checked ~ .first{
+    margin-left: -60%;
+}
+
+#radio5 :checked ~ .first{
+    margin-left: -80%;
+}
+
+.navigation-auto{
+    position: absolute;
+    display: flex;
+    width: 800px;
+    justify-content: center;
+    margin-top: 410px;
+}
+
+.navigation-auto div{
+    border: 2px solid #40d3dc;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.navigation-auto div :not(:last-child){
+    margin-right: 40px;
+}
+
+#radio1 :checked ~ .navigation-auto .auto-btn1 {
+    background: #40d3dc;
+}
+
+#radio2 :checked ~ .navigation-auto .auto-btn2 {
+    background: #40d3dc;
+}
+
+#radio3 :checked ~ .navigation-auto .auto-btn3 {
+    background: #40d3dc;
+}
+
+#radio4 :checked ~ .navigation-auto .auto-btn4 {
+    background: #40d3dc;
+}
+
+#radio5 :checked ~ .navigation-auto .auto-btn5 {
+    background: #40d3dc;
+}
+
+#about1 {
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about2 {
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about3 {
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about4 {
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about5 {
+    padding: 80px 0;
+    color: #ababab;
+}
