--- a/style.css
+++ b/style.css
@@ -198,3 +198,47 @@ nav ul li a :hover ::after{
     padding: 80px 0;
     color: #ababab;
 }
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%;
+}
+
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about-col-2{
+    flex-basis: 60%;
+}
+
+.sub-title{
+    font-size: 60px;
+    font-weight: 600;
+}
+
+tab-title{
+    display: flex;
+    margin: 20px;
+}
+
+tab-titles{
+    display: flex;
+    justify-content: start;
+    gap: 10px;
+}
+
+.tab-links{
+    padding: 10px;
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
