--- a/Tickets.css
+++ b/Tickets.css
@@ -10,3 +10,10 @@
 html{
     scroll-behavior: smooth;
 }
+#header{
+    width: 100%;
+    height: 100vh;
+    background-color: #080808;
+    background-size: cover;
+    background-position: center;
+}
