--- a/Tickets.css
+++ b/Tickets.css
@@ -21,6 +21,12 @@ html{
 .container{
     padding: 10px 10%;
 }
+nav{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    flex-wrap:wrap;
+}
 .logo{
     width:140px;
 }
