--- a/Tickets.css
+++ b/Tickets.css
@@ -34,5 +34,16 @@ nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
-    
+
+}
+nav ul li::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+
 }
