--- a/Tickets.css
+++ b/Tickets.css
@@ -57,3 +57,50 @@ body{
     color: #fff;
     font-family: Arial, sans-serif;
 }
+
+form{
+    width: 60%;
+    margin: 0 auto;
+}
+
+label{
+    display: block;
+    margin-top: 10px;
+}
+
+input [type="text"],
+input [type="email"],
+input [type="password"],
+input [type="tel"],
+input [type="number"],  
+select{
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #888;
+    color:#fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover{
+    background-color: #666;
+}
+
+input[type="submit"]:active{
+    background-color: #17880d;
+}
+
+form input[type="submit"]:nth-child(2){
+    margin-left: 4%;
+}
+
+#otalPrice{
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+
+
