--- a/Tickets.css
+++ b/Tickets.css
@@ -36,6 +36,14 @@ nav ul li{
     margin: 10px 20px;
 
 }
+
+nav ul li a{
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+}
+
 nav ul li::after{
     content: '';
     width: 0;
@@ -75,12 +83,24 @@ input [type="tel"],
 input [type="number"],  
 select{
     width: 100%;
+    padding: 8px;
+    margin-top: 6px;
+    border: none;
+    border-radius: 4px;
+    background-color: #444;
+    color:#fff;
+  /*  cursor: pointer;
+    transition: background-color 0.3s ease;*/
+}
+
+input[type="submit"]{
+    width: 48%;
     padding: 10px;
     margin-top: 10px;
     border: none;
     border-radius: 4px;
-    background-color: #888;
-    color:#fff;
+    background-color: 888;
+    color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
