--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+/* *{
 margin : 0 ;
 padding : 0;
 font-family: 'Poppins',sans-serif;
@@ -455,7 +455,7 @@ nav .fa-solid{
     display: none;
 }
 
-/* css for small screens */
+
 @media only screen and (max-width:600px){
     #header{
         background-image: url(img/backgroundPerPhone\ \(1\).png);
@@ -526,9 +526,558 @@ nav .fa-solid{
     .contact-left{
         flex-basis: 100%;
     }
+*/
+ *{
+    margin: 0;
+    padding: 0;
+    font-family:'Poppins', sans-serif ;
+    box-sizing: border-box;
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    background: #080808;
+    color: #ffffff;
+}
+
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image: url(img/background.png);
+    background-size: cover;
+    background-position:center ;
+}
+
+.container{
+    padding: 10px 10%;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content:space-between ;
+    flex-wrap: wrap;
+}
+
+.logo{
+    width: 270px;
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a{
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 18px;
+    position: relative;
+}
+
+nav ul li a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+nav ul li a:hover::after{
+    width: 100%;
+}
+
+.slider{
+    width: 800px;
+    height: 430px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: center;
+}
+
+.slides{
+    width: 500%;
+    height: 500px;
+    display: flex;
+}
+
+.slides input{
+    display: none;
+
+}
+
+.slide{
+    width: 20%;
+    transition: 2s;
+}
+
+.slide img{
+    width: 400px;
+    height: 400px;
+}
+
+.navigation-manual{
+    position: absolute;
+    width: 800px;
+    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn{
+    border:2px solid #40d3dc;
+    padding: 5px;
+    border-radius:10px;
+    cursor:pointer;
+    transition:1s;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+}
+
+.manual-btn:hover{
+    background: #40d3dc;
+}
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+    margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+    margin-left: -60%;
+}
+
+#radio5:checked ~ .first{
+    margin-left: -80%;
+}
+
+.navigation-auto{
+    position: absolute;
+    display: flex;
+    width: 800px;
+    justify-content: center;
+    margin-top: 410px;
+}
+
+.navigation-auto div{
+    border: 2px solid #40d3dc;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
+}
+
+.navigation-auto div:not(:last-child){
+    margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1{
+    background: #40d3dc;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2{
+    background: #40d3dc;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3{
+    background: #40d3dc;
+}
+
+#radio4:checked ~ .navigation-auto .auto-btn4{
+    background: #40d3dc;
+}
+
+#radio5:checked ~ .navigation-auto .auto-btn5{
+    background: #40d3dc;
+}
+
+
+#about1{
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about2{
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about3{
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about4{
+    padding: 80px 0;
+    color: #ababab;
+}
+
+#about5{
+    padding: 80px 0;
+    color: #ababab;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%; 
+}
+
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about-col-2{
+    flex-basis: 60%;
+}
+
+.sub-title{
+    font-size:60px;
+    font-weight:600;
+}
+
+.tab-title{
+    display: flex;
+    margin: 20px;
+}
+
+.tab-titles{
+    display: flex;
+    justify-content: start;
+    gap: 10px;
+}
+
+.tab-links{
+    padding: 10px;
+    margin-right: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+    
+}
+
+.tab-links::after{
+    content: '';
+    width:0;
+    height: 3px;
+    background: #ff004f;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+}
+
+.tab-links.active-link::after{
+    width: 50%;
+}
+
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span{
+    color: #b54769 ;
+    font-size: 14px;
+}
+
+.tab-contents{
+    display: none;
+}
+
+.tab-contents.active-tab{
+    display:  block;
+}
+
+#coming{
+    padding: 30px 0;
+}
+
+.coming-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.coming-list div{
+    background: #262626;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+}
+
+.coming-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.coming-list div a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.coming-list div:hover{
+    background: #ff004f;
+    transform: translateY(-10px);
+}
+
+#Today{
+    padding: 50px 0;
 
 
 }
+
+.today-list {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+   
+}
+
+.today{
+    flex: 1;
+    display: flex;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    
+}
+
+.today:hover img {
+    transform: scale(1.1);
+}
+
+.today:hover .layer {
+    height: 100%;
+}
+
+.today img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s; /* Corrected spelling */
+    margin: auto;
+   
+}
+
+.layer{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    border-radius: 10px;
+position: absolute;
+left: 0;
+bottom: 0;
+overflow: hidden;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+padding: 0 40px;
+text-align: center;
+font-size: 14px;
+transition: height 0.5s;
+
+
+}
+
+.layer h3{
+    font-weight: 500;
+    margin-bottom: 20px;
+    color: #fff;
+    
+}
+
+.layer a{
+    margin-top: 20px;
+    color: #ff004f;
+    text-decoration:none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 18px; /* Corrected spelling */
+    transition: height 0.5s;
+
+
+}
+
+.today:hover img{
+    transform: scale(1.1);
+
+
+
+}
+
+.today:hover .layer{
+height: 100%;
+
+}
+
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 6px;
+text-decoration:none;
+color: #fff;
+text-align: center;
+transition: background 0.5s;
+}
+
+.btn:hover{
+    background:#ff004f;
+}
+
+
+.contact-left{
+    flex-basis: 35%;
+}
+
+.contact-left p{
+    margin-top: 30px;
+   
+}
+
+.contact-left p i{
+    color: #ff004f;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icons{
+    margin-top: 30px;
+}
+
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+
+.social-icons a:hover{
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+
+nav .fa-solid{
+    display: none;
+}
+
+
+@media only screen and (max-width:600px){
+     #header{
+        background-image: url(img/backgroundPerPhone\ \(1\).png);
+        background-size:cover;
+        background-position: center;
+     }
+
+     .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+     }
+     
+     nav .fa-solid{
+        display: block;
+        font-size: 25px;
+     }
+
+     nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition:right 0.5s ;
+     }
+
+     nav ul li{
+        display: block;
+        margin: 25px;
+
+     }
+
+     nav ul .fa-regular{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+        display: none;
+     }
+
+     .sub-title{
+        font-size: 40px;
+     }
+
+     .about-col-1, .about-col-2{
+        flex-basis: 100%;
+     }
+
+     .about-col-1{
+        margin-bottom: 30px;
+     }
+
+     .about-col-2{
+        font-size: 14px;
+     }
+
+     .tab-titles{
+        flex-direction: column;
+     }
+
+     .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+     }
+
+     .contact-left{
+        flex-basis: 100%;
+     }
+
+}
+
+
 
 
 
