--- a/FoodDrinks.css
+++ b/FoodDrinks.css
@@ -151,6 +151,7 @@ nav .fa-solid{
     color: #fefcfc;
 }
 
+
 #juices{
 
     padding: 30px;
@@ -163,3 +164,46 @@ nav .fa-solid{
     display: none;
 }
 
+
+#cofeebtn{
+
+    background: color #337495; ;
+    border: solid 2px;
+    color:#FFF;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+
+}
+
+
+#TabC{
+
+    border-collapse: collapse;
+    width: 40%;
+
+}
+
+#snacks{
+
+    width: 70%;
+    border-collapse: collapse;
+
+}
+
+
+.menu{
+
+    border-collapse: collapse;
+    width: 70%;
+    font-family: Arial, sans-serif;
+    background-color: #bb20207e;
+    border: solid 4px;
+    color: #b02929;
+    padding: 2px;
+
+}
